fix error and add error handler
